fix sliderer scrollbar problem in firefox

--- a/src/app/auth/slider/slider.component.css
+++ b/src/app/auth/slider/slider.component.css
@@ -22,7 +22,8 @@
   display: flex;
   overflow-x: auto;
   scroll-behavior: smooth;
-  margin-top: 15vh
+  margin-top: 15vh;
+  scrollbar-width: none;
 }
 
 .slider-container.hide {
